--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>springboot-web-example-9</module>
         <module>springboot-web-example-10</module>
         <module>springboot-web-example-11</module>
+        <module>springboot-web-example-12</module>
     </modules>
 
     <properties>
