--- a/springboot-web-example-12/src/main/resources/application.properties
+++ b/springboot-web-example-12/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 # 应用服务 WEB 访问端口
 server.port=8080
-
+spring.thymeleaf.cache=false
+# 是否开启文件上传功能。默认值为 true
+spring.servlet.multipart.enabled=true
+# 临时存盘阈值。超过这个大小的上传文件会先写入临时磁盘目录，否则就是存在内存中。 默认值为 0，单位为“MB”或者“KB”
+spring.servlet.multipart.file-size-threshold=100KB
+# 单个文件的最大值，默认值1MB
+spring.servlet.multipart.max-file-size=1MB
+# 上传文件总的最大值，默认10MB
+spring.servlet.multipart.max-request-size=10MB
